Updated and Cleaned up the code a lot

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
-langauge : python
+language: python
 python:
   - "2.7"
-  cache: pip
+cache: pip
 install:
-  - pip install -r beautifulsoup4 requests selenium pandas
+  - pip install beautifulsoup4 requests selenium pandas
+script:
+  - pwd
   - sudo apt-get install libxss1 libappindicator1 libindicator7
+  - sudo apt-get install libxml2-dev libxslt-dev python-dev
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - sudo apt install ./google-chrome*.deb
   - cd ~
@@ -12,5 +15,6 @@ install:
   - unzip chromedriver_linux64.zip
   - sudo cp -f ~/chromedriver /usr/bin/
   - sudo chmod +x /usr/bin/chromedriver
-script:
+  - cd /home/travis/build/aswinkumar1999/collegedunia_data_scrapper
+  - mkdir /home/travis/Desktop/
   - python web_scraper.py
